# derive_rest_api

./: Cargo.toml  README.md
derive_rest_api/: Cargo.toml
derive_rest_api/examples/: reqwest_async_example.rs  reqwest_blocking_example.rs  ureq_blocking_example.rs
derive_rest_api/src/: error.rs  lib.rs  traits.rs
derive_rest_api/src/clients/: mod.rs  reqwest_async.rs  reqwest_blocking.rs  ureq_blocking.rs
derive_rest_api/tests/: api_client.rs  attribute_parsing.rs  auto_no_request_configuration.rs  builder_client_fields.rs  builder_generation.rs  documentation.rs  empty_structs.rs  field_validation.rs  http_client.rs  request_configuration.rs  reqwest_integration.rs  ureq_integration.rs  url_generation.rs
derive_rest_api_macros/: Cargo.toml
derive_rest_api_macros/examples/: builder_with_client.rs
derive_rest_api_macros/src/: api_client.rs  lib.rs  request_builder.rs  utils.rs
derive_rest_api_macros/src/request_builder/: attributes.rs  builder.rs  http.rs  mod.rs  utils.rs
derive_rest_api_macros/tests/: api_client.rs  attribute_parsing.rs  auto_no_request_configuration.rs  builder_client_fields.rs  builder_generation.rs  documentation.rs  field_validation.rs  http_client.rs  request_configuration.rs  url_generation.rs
examples/json_placeholder/: Cargo.toml  README.md
examples/json_placeholder/examples/: demo.rs  demo_async.rs
examples/json_placeholder/src/: lib.rs
examples/json_placeholder/wasm-demo/: .gitignore  Cargo.toml  README.md  index.html
examples/json_placeholder/wasm-demo/src/: lib.rs
