[package]
name = "derive_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_rest_api_macros = { path = "../derive_rest_api_macros" }
thiserror = "2.0"
serde_json = "1.0"
serde_qs = "1.0.0-rc.3"

[features]
default = []
reqwest-blocking = ["reqwest/blocking", "reqwest/rustls-tls"]
reqwest-async = ["reqwest", "reqwest/rustls-tls"]
ureq-blocking = ["ureq"]

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false

[dependencies.ureq]
version = "2.10"
optional = true
default-features = false
features = ["tls"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0.0-rc.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
