[package]
name = "derive_rest_api_macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.109", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_qs = "1.0.0-rc.3"
