[package]
name = "derive_rest_api_macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.109", features = ["full", "extra-traits"] }

[dev-dependencies]
derive_rest_api = { path = "../derive_rest_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0.0-rc.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
