[package]
name = "json_placeholder"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_rest_api = { path = "../../derive_rest_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0.0-rc.3"

[features]
default = ["reqwest-async", "reqwest-blocking"]
reqwest-blocking = ["derive_rest_api/reqwest-blocking"]
reqwest-async = ["derive_rest_api/reqwest-async"]
ureq-blocking = ["derive_rest_api/ureq-blocking"]
